# DotFiles

./: .gitignore  .gitmodules  CMakeLists.txt  Microsoft.PowerShell_profile.ps1
fish/: config.fish  config.fish.bak  fish_variables  functions
fish/functions/: activate-idf.fish  fish_prompt.fish  old_prompt.fish  reload_polybar.fish  swank.fish  switch_clangd.fish
fish/scripts/: reload_polybar_script.fish
kitty/: kitty.conf
leftwm/: config.ron  system-overview  teste.ron  themes.toml
leftwm/launcher/rofi/: colors.rasi  launcher.rasi
leftwm/sxhkd/: sxhkdrc
leftwm/themes/: current
leftwm/themes/candeww/: down  picom.conf  theme.ron  up
leftwm/themes/candeww/eww/: eww.scss  eww.yuck  music-data.fish
leftwm/themes/candeww/scripts/: connect_to_my_bt_speaker.fish
leftwm/themes/candeww/scripts/musiquinha/: hook_musiquinha.py  next_musiquinha.fish
leftwm/themes/candeww/scripts/musiquinha-reborn/: TODO.md
leftwm/themes/candy/: down  leftwm  picom.conf  polybar.config  template-same-icons.liquid  template-with-icons.liquid  template.liquid  up
leftwm/themes/candy/scripts/: setbacklight.fish
leftwm/themes/candy/scripts/musiquinha/: error.fish  (+4 more)
leftwm/themes/candy/scripts/musiquinha-reborn/: TODO.md
leftwm/themes/candy/scripts/musiquinha-reborn/hook/: .gitignore  CMakeLists.txt
leftwm/themes/candy/scripts/musiquinha-reborn/hook/src/: main.c
leftwm/themes/smooth-custom/: picom.conf  polybar.config  template.liquid  theme.ron  up
librewolf/: README.md
librewolf/chrome/includes/: cascade-config.css  cascade-layout.css  cascade-responsive.css
